@@ -1,5 +1,10 @@
 2007-06-03  Vitaly Alexeev <tishka92@yahoo.com>
 
+	* gameswf/gameswf_font.cpp,
+	* gameswf/gameswf_freetype.*: added BearingX & BearingY
+	
+2007-06-03  Vitaly Alexeev <tishka92@yahoo.com>
+
 	* gameswf/gameswf_freetype.cpp: added get_fontfile(...) function,
 	this function gets font file name by font name (for Win32 only)
 
